force-app/main/default/objects/QC_Build_Measure__c/QC_Build_Measure__c.object-meta.xml
<CustomObject>
    <label>QC Build Measure</label>
    <nameField>
        <label>Area</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QC Build Measure</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>