force-app/main/default/objects/QC_Build_Measure__c/fields/Do_edges_need_beveled_and_polished__c.field-meta.xml
<CustomField>
    <fullName>Do_edges_need_beveled_and_polished__c</fullName>
    <label>Do edges need beveled and polished?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>