force-app/main/default/objects/QC_Build_Measure__c/fields/Quality_Control__c.field-meta.xml
<CustomField>
    <fullName>Quality_Control__c</fullName>
    <label>Quality Control</label>
    <referenceTo>Quality_Control__c</referenceTo>
    <relationshipLabel>QC Build Measure</relationshipLabel>
    <relationshipName>QC_Build_Measure</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>