force-app/main/default/objects/QC_Build_Measure__c/recordTypes/Build_Measure_Standard.recordType-meta.xml
<RecordType>
    <fullName>Build_Measure_Standard</fullName>
    <active>true</active>
    <label>Build Measure Standard</label>
</RecordType>